Ansible/Kubernetes/k8smanifests/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "rancher.mrcurls.org"
        - "argocd.mrcurls.org"
      tls:
        mode: SIMPLE
        credentialName: mrcurls-cert-prod
